<resources>
    <string name="app_name">NickelFox Assignment</string>
    <string name="profile">profile</string>
    <string name="title">title</string>
    <string name="description">Image of a cartoon</string>
    <string name="hello_world">Hello World</string>
    <string name="hello_world_hope_you_all_are_doing_good">Hello World, Hope you all are doing good!!</string>
    <string name="google_map_key">AIzaSyCdaXdBoknw4yatmOo3msPxctpu6Cs8G58</string>
    <string name="cartoon">Image of a cartoon</string>
    <string name="zoom">zoom</string>
    <string name="rotation">Rotation</string>
    <string name="fade">fade</string>
    <string name="blink">blink</string>
    <string name="move">move</string>
    <string name="slide">slide</string>
    <string name="form_submission">Form Submission</string>
    <string name="animations_demo_screen">Animations Demo Screen</string>
    <string name="calculator_ui">Calculator UI</string>
    <string name="google_maps_screen">Google Maps Screen</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="person_icon">Person Icon</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="mother_tongue">Mother Tongue</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="rating">Rating</string>
    <string name="terms">Accept all the terms and conditions</string>
    <string name="submit">Submit</string>
    <string name="find">Find</string>
    <string name="assignment_0">Assignment 0</string>
    <string name="marker_clustering">Marker Clustering</string>
    <string name="shared_transition">Shared Transition</string>
    <string name="user_onBoarding">User\'s OnBoarding</string>
    <string name="logo">Logo</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="subtract">-</string>
    <string name="plus">+</string>
    <string name="crashlytics">Crashlytics</string>
    <string name="equal">=</string>
    <string name="ac">AC</string>
    <string name="sign">+/-</string>
    <string name="mod">%</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="dot">.</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="_8">8</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="_00">00</string>
    <string name="operation">1.000 × 4 + 2 × 1</string>
    <string name="result">4002</string>
    <string name="equalTo">=</string>
    <string name="logo_image">Logo Image</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up_to_start_your_new_journey">Sign Up to start your new Journey</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="password">Password</string>
    <string name="go">GO</string>
    <string name="already_have_an_account_login">Already have an account? LogIn</string>
    <string name="logout">Logout</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="forget_password">Forget Password?</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="image_of_form">image of form</string>
    <string name="image_of_animation">Image of animation</string>
    <string name="animation_demo">Animation Demo</string>
    <string name="image_of_calculator">Image of calculator</string>
    <string name="calculator">Calculator</string>
    <string name="image_of_google_maps">Image of google maps</string>
    <string name="first_assignment">First Assignment</string>
    <string name="user_OnBoarding">User\'s OnBoarding</string>
    <string name="viewpager_demo">ViewPager Demo</string>
    <string name="image_of_gender">Image of gender</string>
    <string name="image_of_rating">Image of rating</string>
    <string name="crash">Crash</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="third_screen">Third Screen</string>
    <string name="first_screen">News App</string>
    <string name="second_screen">Image Upload App</string>
    <string name="start_animation">Start Animation</string>
    <string name="animation">Animation</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="passwordReset_description">Enter your email id to receive a password reset link</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="sin">SIN</string>
    <string name="cos">COS</string>
    <string name="tan">TAN</string>
    <string name="backArrow">←</string>
    <string name="zero">0</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="news_24">News 24</string>
    <string name="for_you">For You</string>
    <string name="top">Top</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="small_business">business</string>
    <string name="small_entertainment">entertainment</string>
    <string name="small_health">health</string>
    <string name="small_science">science</string>
    <string name="small_sports">sports</string>
    <string name="small_technology">technology</string>
    <string name="search">Search</string>
    <string name="searched">Searched</string>
    <string name="share">Share</string>
    <string name="empty_string" />
    <string name="remove_bookmark">Remove from Bookmark</string>
    <string name="added_bookmark">Added to Bookmark</string>
    <string name="already_added_bookmark">Already exists in Bookmarked!</string>
    <string name="http_error">"retrofit2.HttpException: HTTP 429 "</string>
    <string name="source_time">%1$s • %2$s</string>
    <string name="news_author">By %1$s</string>
    <string name="error">You have made too many requests recently. Developer accounts are limited to 50 requests in every 12 hours.</string>
    <string name="internet_error">No internet access</string>
    <string name="api_error">Api request limit exceed</string>
    <string name="retrofit_error">retrofit2.HttpException: HTTP 429</string>
    <string name="retrofit_small_error">HTTP 429</string>
    <string name="data_fetch_error">Unable to resolve host \"newsapi.org\": No address associated with hostname</string>
    <string name="net_error">java.net.UnknownHostException: Unable to resolve host \"newsapi.org\": No address associated with hostname</string>
    <string name="anonymous">Anonymous</string>
    <string name="retry"><u>Retry</u></string>
    <string name="loading">Loading...</string>
    <string name="image">Image</string>
    <string name="choose_an_image">CHOOSE AN IMAGE</string>
    <string name="upload_to_imgur">UPLOAD TO IMGUR</string>

    <string name="permission_denied">Permission denied</string>
    <string name="image_uploaded">Image Uploaded successfully</string>
    <string name="uploading_error">Error in uploading</string>
    <string name="choose_image">Please choose an image to upload!</string>
    <string name="exception">Unknown network Exception.</string>
    <string name="select_gallery_image">Select gallery-image</string>
    <string name="take_image">Take image</string>
    <string name="saving_error">Couldn\'t save bitmap</string>
    <string name="media_store_error">Couldn\'t create MediaStore entry.</string>
    <string name="choose_option">Choose an option</string>
    <string name="choose_message">How do you want to choose an image?</string>
    <string name="enable_permission">Enable Media Permission</string>
    <string name="cancel_image">Remove Image</string>
    <string name="enable_media_permission">This app needs the media permission, please turn on your media permission from app settings</string>
    <string name="enable_camera_permission">This app needs the camera permission, please turn on your camera permission from app settings</string>
    <string name="cancel_image_message">Are you sure you want to remove this image?</string>
    <string name="cancel_image_desc">cancelImage</string>
    <string name="host_error">Unable to resolve host \"api.imgur.com\": No address associated with hostname</string>
</resources>