<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".transition.TransitionActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/my_toolbar" />

        <LinearLayout
            android:id="@+id/llCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/description"
                android:src="@drawable/bart"
                android:transitionName="@string/profile" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/hello_world"
                android:transitionName="@string/title" />

        </LinearLayout>

    <Button
        android:id="@+id/btnAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/start_animation" />

</RelativeLayout>