<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/white"
    tools:context=".assignment0.FormSubmission">

    <include layout="@layout/my_toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dob"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/date_of_birth"
        app:layout_constraintEnd_toEndOf="@id/text"
        app:layout_constraintStart_toStartOf="@id/text"
        app:layout_constraintTop_toTopOf="@id/text"
        app:startIconDrawable="@drawable/ic_dob">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/genderImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/gender"
        android:contentDescription="@string/person_icon"
        app:layout_constraintStart_toStartOf="@id/dob"
        app:layout_constraintTop_toTopOf="@id/dob" />

    <TextView
        android:id="@+id/genderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="92dp"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/genderImage"
        app:layout_constraintTop_toTopOf="@id/dob" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="26dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/genderText"
        app:layout_constraintStart_toStartOf="@id/genderText"
        app:layout_constraintTop_toTopOf="@id/genderText">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female"
            android:textSize="15sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tongueText"
        android:layout_width="141dp"
        android:layout_height="27dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="52dp"
        android:text="@string/mother_tongue"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@id/radioGroup" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/hindi"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/tongueText"
        app:layout_constraintTop_toBottomOf="@+id/tongueText"
        app:layout_constraintTop_toTopOf="@id/tongueText" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/english"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/tongueText"
        app:layout_constraintTop_toBottomOf="@+id/tongueText"
        app:layout_constraintTop_toTopOf="@id/tongueText" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginTop="50dp"
        android:text="@string/rating"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/switch2"
        app:layout_constraintTop_toBottomOf="@+id/switch2"
        app:layout_constraintTop_toTopOf="@id/switch2" />

    <RatingBar
        android:id="@+id/rBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@color/white"
        android:numStars="5"
        android:stepSize="0.5"
        android:theme="@style/Widget.AppCompat.RatingBar"
        app:layout_constraintStart_toStartOf="@id/rating"
        app:layout_constraintTop_toBottomOf="@+id/rating"
        app:layout_constraintTop_toTopOf="@id/rating" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="84dp"
        android:padding="7dp"
        android:text="@string/terms"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/rBar"
        app:layout_constraintTop_toBottomOf="@+id/rBar"
        app:layout_constraintTop_toTopOf="@id/rBar" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="64dp"
        android:background="@color/teal_200"
        android:text="@string/submit"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintTop_toTopOf="@id/checkBox" />


</androidx.constraintlayout.widget.ConstraintLayout>